Refactor distance calculation. Add debug option to track editor for showing distances. Now error messages are also more specific.